[package]
name = "metanote"
authors = ["Brian Reading <brian.reading@gmail.com>"]
description = "An audio metadata viewer and editor"
license = 'GPL-3.0-or-later'
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.1.0", package = "libadwaita" }
anyhow = "1.0.52"
async-channel = "1.6.1"
env_logger = "0.9.0"
gio = "0.15.2"
glib = "0.15.2"
gtk = { version = "0.4.2", package = "gtk4" }
gtk-macros = "0.3.0"
log = "0.4.14"
