[package]
name = "metanote"
authors = ["Brian Reading <brian.reading@gmail.com>"]
description = "An audio metadata viewer and editor"
license = 'GPL-3.0-or-later'
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.1.0", package = "libadwaita" }
anyhow = "1.0.52"
async-channel = "1.6.1"
derive_builder = "0.10.2"
env_logger = "0.9.0"
getset = "0.1.2"
gtk = { version = "0.4.2", package = "gtk4" }
gtk-macros = "0.3.0"
lofty = { git = "https://github.com/Serial-ATA/lofty-rs.git" }
log = "0.4.14"
mime_guess = "2.0.4"